# libraries

./: CMakeLists.txt  README.md  guide.txt  main.cpp  setup.bat
Dynamic_Implicit/: CMakeLists.txt  DynSortImp.cpp  DynSortImp.h
Dynamic_explicit/: CMakeLists.txt  DynSortExp.cpp  DynSortExp.h
Dynamic_lib/: CMakeLists.txt  DynSort.cpp  DynSort.h
Static_lib/: CMakeLists.txt  staticlb.cpp  staticlb.h
